@@ -47,7 +47,12 @@ mi.polr <- function ( formula, data = NULL, drop.unused.levels = TRUE,
   # main program
   
   if(augment.data){
-    data2 <- rbind.data.frame(data, .randdraw(data, n=trunc(dim(data)[1])*0.1))
+    n.aug <- trunc(dim(data)[1])*0.1
+    n.complete <- dim(na.exclude(data))[1]
+    if(n.aug > n.complete){
+      n.aug <- n.complete
+    }
+    data2 <- rbind.data.frame(data, .randdraw(data, n=n.aug))
     bplr.imp <- bayespolr( formula = formula, 
                            data = data2,
                            start = 0, 
