@@ -1,3 +1,11 @@
+2008-12-22 Yu-Sung Su     <ys463@columbia.edu>  
+   * add augment.data option to mi procedures.  If TRUE, will augment the data 
+    with 10% of the observaed data.  If this number is bigger than the number
+    of the raw of the compelete data, augment the data with the number of 
+    the raw of the complete data.
+   * return data.tmp into the global. 
+
+
 2008-10-7 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 0.02-02
    * create display methods for glm.mi & lm.mi
